--- a/client_side/demo.html
+++ b/client_side/demo.html
@@ -76,6 +76,23 @@ $(window).load(function(){
   [[Category:Cinemas and movie theatres in Toronto]]
   [[Category:Streamline Moderne architecture in Canada]]
   [[Category:Theatres completed in 1939]]
+
+  ==List==
+
+{{columns-list|3| 
+*[[Mary Anne à Beckett]] (1817–1863)
+*[[Michel van der Aa]] (born 1970)
+*[[Thorvald Aagaard]] (1877–1937)
+*[[Hector Ayala|Héctor Ayala]] (1914–1990)
+*[[Nat Ayer]] (1887–1952)
+*[[Florence Aylward]] (1862–1950)
+*[[Ayuo]] (born 1960)
+*[[Frederick Ayres]] (1876–1926)
+*[[Azalais de Porcairagues]] (fl. mid-12th century)
+*[[Svitlana Azarova]] (born 1976)
+*[[Filippo Azzaiolo]] (fl. 1557–1569)
+}}
+
 </pre>
 <div id="text"></div>
 <pre id="result"></pre>
